--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-concurrency": "^3.0.0",
     "ember-data": "~3.28.6",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
